--- a/src/resource/Navbar.css
+++ b/src/resource/Navbar.css
@@ -4,11 +4,11 @@
     align-items: center;
     justify-content: space-between;
     background-color: #fff;
-    padding: 15px 7%;
+    padding: 1em 4em;
     transition: 0.5s;
 }
 .logo {
-    width: 160px;
+    width: 10em;
     cursor: pointer;
 }
 ul {
@@ -18,36 +18,36 @@ ul {
 }
 ul li {
     display: inline-block;
-    margin: 10px 20px;
-    font-size: 18px;
+    margin: 1em 2em;
+    font-size: 1em;
     cursor: pointer;
 }
 .toggle-icon {
-    width: 50px;
+    width: 3em;
     cursor: pointer;
-    margin-left: 40px;
+    margin-left: 3em;
 }
 .search-box {
     display: flex;
     align-items: center;
     background: #242424;
-    padding: 10px 20px;
-    border-radius: 50px;
+    padding: 0.5em 2em;
+    border-radius: 2em;
 }
 .search-box input {
-    padding: 6px;
+    padding: 0.3em;
     background: transparent;
     border: 0;
     outline: 0;
     color: #fff;
-    font-size: 18px;
-    max-width: 200px;
+    font-size: 1em;
+    max-width: 9em;
 }
 .search-box input::placeholder {
     color: #fff;
 }
 .search-box img {
-    width: 20px;
+    width: 1.2em;
     cursor: pointer;
 }
 .dark .navbar {
