--- a/src/resource/index.css
+++ b/src/resource/index.css
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('../Assets/background.jpg') no-repeat;
+  /*background: url('../Assets/background.jpg') no-repeat;*/
   background-size: cover;
   background-position: center;
 }
